<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mydatabaseapp.register.RegisterFragment">

    <data>

        <variable
            name="myViewModel"
            type="com.example.mydatabaseapp.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="80dp"
            android:textColor="@android:color/white"
            android:text="@string/welcome_to"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:text="@string/signup_screen"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_name_text_field"
                style="@style/PlainTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:hint="@string/FirstNameTextField"
                android:importantForAutofill="no"
                android:paddingStart="10dp"
                android:text="@={myViewModel.inputFirstName}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/secondNameTextField"
                style="@style/PlainTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/SecondNameTextField"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:text="@={myViewModel.inputLastName}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userNameTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/UserMailId"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:text="@={myViewModel.inputEmail}"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/PasswordTextFiels"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:text="@={myViewModel.inputPassword}"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40sp"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:onClick="@{()->myViewModel.sumbitButton()}"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</layout>